<resources>
    <string name="app_name">unistack</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="sifremi_unuttum">Şifremi Unuttum?</string>
    <string name="henuz_kayit_oladinmi">Henüz Kayıt Olmadınız mı?</string>
    <string name="kayıt_ol">Kayıt Ol</string>
    <string name="password">Password</string>
    <string name="buton_giris">Giriş Yap</string>
    <string name="sifre_unuttum">Mail adresinizi giriniz.</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="repassword">Password Tekrar</string>
    <string name="kaydol">Kayıt Ol</string>
    <string name="undo_string">tamam</string>
    <string name="register_error">Bilgilerinizi Kontrol Edip Tekrar Deneyiniz.</string>
    <string name="register_connection_error">Bir Hata Oluştu.İntenet Bağlantınızı Kontrol Ediniz.!</string>
    <string name="sifre_aciklama">Gönder butonuna tıkladığınızda mailinize geçici bir şifre gönderilecektir..Mailinize gelen geçici şifreniz ile uygulamaya giriş yapabilirsiniz</string>
    <string-array name="clas_array">
        <item>1. Sınıf</item>
        <item>2. Sınıf</item>
        <item>3. Sınıf</item>
        <item>4. Sınıf</item>
    </string-array>
    <string-array name="program_array">
        <item>Önlisans</item>
        <item>Lisans</item>
        <item>YüksekLisans</item>
        <item>Doktora</item>
    </string-array>
</resources>
