<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_snackbar"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.evren.unistack.register.Login"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_background"
    android:alpha="0.5"
    android:background="@drawable/png_background"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_below="@+id/user_profile_photo"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffff"
                >

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape"
                    android:drawableLeft="@drawable/png_user"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:text="evren33058@ogr.duzce.edu.tr"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#fff">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edittext_shape"
                    android:drawableLeft="@drawable/png_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:text="123654789sA"
                    android:textColorLink="@android:color/background_light" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/txt_forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sifremi_unuttum"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                 />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/shape_buttonwidth"
                android:layout_height="@dimen/shape_buttonheight"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/buton_giris"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">


                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                    android:id="@+id/txt_register1"
                    android:layout_gravity="center"
                android:text="Henüz kayıt olmadınız mı?"
                android:textSize="15dp"
                    android:textColor="@android:color/black"
                    />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_register2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:text="KAYIT OL"/>
            </LinearLayout>




        </LinearLayout>


    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:elevation="4dp" />

</RelativeLayout>

